<resources>
    <string name="app_name">UoB Timetable</string>
    <string name="app_name_launcher">Timetable</string>

    <string name="activity_course_list_label">Courses</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_developer_label">Developer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_dismiss">Okay</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_change_course">Reselect course</string>
    <string name="dialog_open_timetable_site">Open timetable site</string>

    <string name="text_disclaimer">This is a third party application which is in no way affiliated with the University of Bedfordshire.</string>
    <string name="text_tutorial_disclaimer">This data is best used as a guide as it is not obtained directly from the university and may not be 100% accurate.</string>
    <string name="text_tutorial_hide_sessions">You can enter edit mode to hide sessions by holding a session. You can then toggle the viewing of hidden sessions from the menu.</string>
    <string name="text_cant_toggle_show_hide">You need to exit edit mode, by holding down on a session, before you can toggle hidden sessions.</string>
    <string name="text_no_sessions">No sessions to display.</string>
    <string name="text_no_courses">No courses for this department and level.</string>
    <string name="text_loading_cached_sessions">Loading cached sessions instead.</string>
    <string name="text_course_invalid">Your selected course is no longer accessible. Please reselect your course from the list.</string>
    <string name="text_session_invalid">Some details for this session are missing due to an issue with the university system. Check the timetable website for full session details.</string>

    <string name="text_welcome_standard">The next screen will ask you to select a course.</string>
    <string name="text_welcome_migrate">We\'ve updated!\n\nYou\'ll need to re-select your course.</string>

    <string name="warning_net_connection">Network connection required</string>
    <string name="warning_session_download_error">Session download error</string>
    <string name="warning_course_download_error">Course download error</string>
    <string name="warning_server_error">Server error - please try again later.</string>
    <string name="warning_cant_toggle_show_hide">Can\'t toggle hidden sessions.</string>
    <string name="warning_course_invalid">Course inaccessible</string>

    <string name="net_required_first_run">You\'ll need an internet connection to initially download your timetable, after that you can access it offline.</string>
    <string name="net_required_courses">A network connection is required to fetch course data.</string>
    <string name="net_required">No internet connection</string>

    <string name="shortcut_termdates">Term dates</string>

    <string name="setting_notify_session_reminders_enabled">Show session notifications</string>
    <string name="setting_notify_session_reminders_minutes">Reminder interval</string>
    <string name="setting_refresh_wifi">Refresh on WiFi</string>
    <string name="setting_refresh_cellular">Refresh on cellular data</string>
    <string name="setting_long_room_names">Display full room names</string>

    <string name="preference_category_notifications">Notifications</string>
    <string name="preference_category_display">Display</string>
    <string name="preference_category_sync">Sync</string>

    <string name="pref_notify_session_reminders_enabled_on">Show a notification before sessions start (excluding hidden sessions)</string>
    <string name="pref_notify_session_reminders_enabled_off">Don\'t show a notification before sessions start</string>
    <string name="pref_notify_session_reminders_minutes">Show notification %s session starts</string>
    <string name="pref_long_room_names_on">Display full room names (eg "G101 - Campus Centre Lecture Theatre")</string>
    <string name="pref_long_room_names_off">Display room codes only (eg "G101")</string>
    <string name="pref_refresh_wifi_on">Refresh the timetable when launching the app on WiFi</string>
    <string name="pref_refresh_wifi_off">Don\'t refresh the timetable when launching the app on WiFi</string>
    <string name="pref_refresh_cellular_on">Refresh the timetable when launching the app on 2G/3G/4G</string>
    <string name="pref_refresh_cellular_off">Don\'t refresh the timetable when launching the app on 2G/3G/4G</string>

    <string name="notify_channel_session_reminders_name">Session reminders</string>
    <string name="notify_channel_session_reminders_description">Enable reminder notifications before sessions start (excluding hidden sessions)</string>
    <string name="title_activity_dev">DevActivity</string>

</resources>
